normal-dep/postgress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  labels:
    name: postgress-deploy
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgress-pod
      app: demo-voting-app
  template:
    metadata:
      name: postgres-pod
      labels:
        name: postgress-pod
        app: demo-voting-app
    spec:
      containers:
        - name: postgres
          image: postgres: latest
          ports:
            - containerPort: 5432
