normal-dep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "a301d19dbd7114abc806f91bcf1d08ba-175158067.ap-south-1.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/vote"
        backend:
          service:
            name: ui
            port:
              number: 8080

      - pathType: Prefix
        path: "/results"
        backend:
          service:
            name: offer
            port:
              number: 1001
